Fix paywall actions dropdown inconsistencies when paywall title was too long or 'Specific posts or pages' was selected from the dropdown.

--- a/assets/src/scss/pages/preview.scss
+++ b/assets/src/scss/pages/preview.scss
@@ -137,7 +137,8 @@
 		position: fixed;
 		bottom: 0;
 		z-index: 9999;
-		width: 732px;
+		min-width: 732px;
+		max-width: 900px;
 		height: 52px;
 		padding: 0 15px;
 		border-radius: 4px;
@@ -149,6 +150,7 @@
 		backdrop-filter: blur(10px);
 
 		&-wrap {
+			margin-right: 15px;
 			flex: 1;
 			display: flex;
 			align-items: center;
@@ -213,7 +215,7 @@
 			}
 		}
 
-		&-search {
+		&__search {
 			position: relative;
 			.select2 {
 				font-size: 17px;
@@ -248,6 +250,10 @@
 							}
 						}
 					}
+					+ .rev-gen-preview-main--paywall-actions__search-icon {
+						top: 43px;
+						right: 1px;
+					}
 				}
 				span.selection {
 					span.select2-selection--multiple.select2-selection--multiple {
@@ -281,80 +287,6 @@
 				width: 16px;
 				height: 16px;
 			}
-
-		}
-
-		&-search-post {
-			display: flex;
-
-			.select2-container {
-				background-color: inherit;
-				width: 150px !important; /* stylelint-disable-line declaration-no-important */
-				color: #1e1e1e;
-				height: 23px;
-				align-self: center;
-
-				&--open {
-					height: auto;
-					span.selection {
-						span.select2-selection--multiple.select2-selection--multiple.select2-selection--multiple {
-							position: relative;
-							overflow-y: scroll;
-							bottom: 0;
-							border-left: 1px solid #aaa;
-							border-right: 1px solid #aaa;
-							ul.select2-selection__rendered {
-								li.select2-selection__choice.select2-selection__choice {
-									display: block;
-								}
-							}
-						}
-					}
-				}
-				span.selection {
-					span.select2-selection--multiple.select2-selection--multiple {
-						position: relative;
-						bottom: 6px;
-						ul.select2-selection__rendered {
-							li.select2-selection__choice {
-								display: none;
-							}
-							li.select2-search.select2-search--inline {
-								margin-bottom: 0;
-							}
-						}
-					}
-				}
-
-				.select2-selection__arrow {
-					display: none;
-				}
-
-				span.selection {
-					color: #333;
-					font-weight: 500;
-
-					span.select2-selection {
-						border: 0;
-						border-bottom: 2px solid #000;
-						border-radius: 0;
-						height: 23px;
-						overflow: hidden;
-					}
-				}
-			}
-
-			&-icon {
-				position: relative;
-				align-self: center;
-				left: -20px;
-				top: 5px;
-				background: url(../img/icon-search.svg) no-repeat right 0 bottom;
-				background-size: 16px 16px;
-				width: 16px;
-				height: 16px;
-			}
-
 		}
 
 		&-update {
